--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			of src attribute */
 			let image = document.getElementById("image");
 
-			image.src = "aboba/image/aaaaaaa.jpeg"
+			image.src = "aaaaaaa.jpeg"
 
 			document.getElementById("btnID")
 					.style.display = "none";
