--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h3>бляяяя</h3>
 
 		<!-- img element without src attribute -->
-		<img id="image" src="" alt="еботня не работает" />
+		<img id="image" src="" alt="еботня не работает">
 	</div>
 
 	<button type="button"
@@ -27,7 +27,7 @@
 			of src attribute */
 			let image = document.getElementById("image");
 
-			image.src = "aaaaaaa.jpeg"
+			image.src = "image/aaaaaaa.jpeg"
 
 			document.getElementById("btnID")
 					.style.display = "none";
