--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h3>бляяяя</h3>
 
 		<!-- img element without src attribute -->
-		<img id="image" src="" alt="еботня не работает">
+		<img id="image" >
 	</div>
 
 	<button type="button"
