--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
 		<h1>еботня</h1>
-		<h3>бляяяя</h3>
+		<h3>бляяяять</h3>
 
 		<!-- img element without src attribute -->
 		<img id="image" >
