--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	</div>
 
 	<button type="button"
-		onclick="show()" id="btnID">
+		onclick="showfoto()" id="btnfoto">
 		опппппаааа
 	</button>
 
 	<script>
-		function show() {
+		function showfoto() {
 
 			/* Get image and change value
 			of src attribute */
@@ -32,7 +32,7 @@
 			image.src = "image/aaaaaaa.jpeg"
 			image1.src = "image/123.jpeg"
 
-			document.getElementById("btnID")
+			document.getElementById("btnfoto")
 					.style.display = "none";
 		}
 	</script>
