--- a/form_golos.html
+++ b/form_golos.html
@@ -1,4 +1,63 @@
+<!DOCTYPE HTML>
 
+
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <title>Название страницы</title>
+        <meta name="description" content="Описание страницы" />
+
+
+    </head>
+
+    <body>
+        <nav class="collor" role="navigation">
+			<div class="navigation_form">
+				<a id="logo-container" href="/index.html" class="logo">
+					ебаный рот
+				</a>
+				<ul class="right button">
+					<li>
+						<a href="/form_reg.html">Пачада заявки</a>
+					</li>
+					<li>
+						<a href="/form_golos.html"> Голосование</a>
+					</li>
+					<il>
+						<a href="/form_res.html"> Результат</a>
+					</il>
+
+
+				</ul>
+			</div>
+
+
+        <main>
+            <div align ="center">
+                <section>
+                    <h1>Голосование</h1>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv5nMDU-at0Rz6zJf7K4be4FLNidJeoJ0ypvDCddKY-9z3PA/viewform?embedded=true" width="640" height="3222" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                    </section>
+            </div>
+        
+            </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
 
 
 
