--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
+
+
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     </head>
-   
+	
 <body>
+	<header>
+		<nav class="collor" role="navigation">
+			<div class="navigation_form">
+				<a id="logo-container" href="/" class="logo">
+					ебаный рот
+				</a>
+				<ul class="right button">
+					<li>
+						<a href="/form_reg.html">Пачада заявки</a>
+					</li>
+					<li>
+						<a href="/form_golos.html"> Голосование</a>
+					</li>
+					<il>
+						<a href="/form_res.html"> Результат</a>
+					</il>
+
+
+				</ul>
+			</div>
+
+
+
+
+		</nav>
+
+
+
+		<div align ="center">
+			<h1 align="left">
+				Я ебалан
+			</h1>
+			<h1	align ="right">
+				регистрация
+				участники
+				голосование
+				результат
+			</h1>
+		
+		</div>
+		
+			
+
+			
+
+
+		
+
+	  </header>
 	<div>
 		<h1>еботня</h1>
 		<h3>бляяяять</h3>
