--- a/form_res.html
+++ b/form_res.html
@@ -5,14 +5,14 @@
 
 <html>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <php>
+        <?php
         $id = '1OCn_nyTfpcdEtXXpRL17F02KuQiuVkpnd0PHlARQ3Nw';
         $gid = '0';
         $csv = file_get_contents('https://docs.google.com/spreadsheets/d/' . $id . '/export?format=csv&gid=' . $gid);
         $csv = explode("\r\n", $csv);
        $ array = array_map('str_getcsv', $csv);
 
-    </php>
+    ?>
 
     <table class="table">
         <thead class="thead-dark">
@@ -24,8 +24,8 @@
             </tr>
         </thead>
         <tbody>
-          <php>
-            foreach ($array as $arr){
+            <?php
+                foreach ($array as $arr){
                 $i++;
                 $html .= '<tr>';
                 $html .= '<td scope="row">'.$i.'</td>';
@@ -33,7 +33,7 @@
                   $html .= '<td scope="col">'.$td.'</td>';
                 }
                 $html .= '';
-          </php>
+            ?>
         </tbody>
       </table>
 
