--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a href="/form_golos.html"> Голосование</a>
 					</li>
 					<il>
-						<a href="/form_res.html"> Результат</a>
+						<a href="/test.php"> Результат</a>
 					</il>
 
 
