--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+		<meta charset = "utf-8">
+		<title> Background IMG</title>
+		<link rel = "stylesheet" href = "main.css">
     </head>
-	
+	<head>
+		<style>
+			A{
+				color:#800;
+				background: #ffffff;
+				padding: 2px;
+			}
+		</style>
+	</head>
 <body>
 	<header>
 		<nav class="collor" role="navigation">
@@ -29,6 +39,7 @@
 				</ul>
 			</div>
 		</nav>
+		
 
 
 
@@ -36,11 +47,11 @@
 			<h1 align="left">
 				Я ебалан
 			</h1>
-			<h1	align ="right">
-				регистрация
-				участники
-				голосование
-				результат
+			<h1	align ="center">
+				регистрация<br>
+				участники<br>
+				голосование<br>
+				результат<br>
 				
 			</h1>
 		
