--- a/form_golos.html
+++ b/form_golos.html
@@ -6,9 +6,17 @@
         <meta charset="UTF-8">
         <title>Название страницы</title>
         <meta name="description" content="Описание страницы" />
-
-
     </head>
+	<head>
+		<style>
+			A{
+				color:#800;
+				background: #ffffff;
+				padding: 2px;
+			}
+		</style>
+	</head>
+	<head><link rel = "stylesheet" href = "golos.css"></head>
 
     <body>
         <nav class="collor" role="navigation">
@@ -36,7 +44,7 @@
             <div align ="center">
                 <section>
                     <h1>Голосование</h1>
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv5nMDU-at0Rz6zJf7K4be4FLNidJeoJ0ypvDCddKY-9z3PA/viewform?embedded=true" width="640" height="5000" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv5nMDU-at0Rz6zJf7K4be4FLNidJeoJ0ypvDCddKY-9z3PA/viewform?embedded=true" width="640" height="3500" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
                     </section>
             </div>
         
