--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta charset = "utf-8">
-		<title> Background IMG</title>
+		<title> Овчинников сайт</title>
 		<link rel = "stylesheet" href = "main.css">
     </head>
 	<head>
@@ -57,21 +56,12 @@
 		
 		</div>
 		
-			
-
-			
-
-
 		
-
 	  </header>
 	<div>
 		<h1>еботня</h1>
 		<h3>бляяяять</h3>
-
-		<!-- img element without src attribute -->
 		<img id="image">
-		<img id="image1">
 	</div>
 
 	<button type="button"
@@ -81,15 +71,8 @@
 
 	<script>
 		function showfoto() {
-
-			/* Get image and change value
-			of src attribute */
 			let image = document.getElementById("image");
-			let image1 = document.getElementById("image1");
-
 			image.src = "image/aaaaaaa.jpeg"
-			image1.src = "image/123.jpeg"
-
 			document.getElementById("btnfoto")
 					.style.display = "none";
 		}
