Пытаюсь добавить ссылку на страницу с авторами сайта

--- a/form_reg.html
+++ b/form_reg.html
@@ -24,7 +24,7 @@
 	<div>
 		<img id="image">
 	</div>
-	<button type="submit"
+	<button type="button"
 		onclick="showfoto()" id="btnfoto">
 		Подумой
 	</button>
