--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 				</a>
 				<ul class="right button">
 					<li>
+						<a href = "/author.html">Авторы проекта</a>
+					</li>
+					<li>
 						<a href="/form_reg.html">Пачада заявки</a>
 					</li>
 					<li>
