--- a/author.html
+++ b/author.html
@@ -33,18 +33,10 @@
                 <div class="col 16 s12">
                     <p class="aut">Авторы</p>
                     <ul>
-                        <li>
-                            <p><a class="red-text" href="https://vk.com/idnan13" target="_blank">Вёрстка сайта Семениченко Д.В.</a></p>
-                        </li>
-                        <li>
-                            <p><a class="red-text" href="https://vk.com/loiicom" target="_blank">Функции сайта Маркин Н.Д.</a></p>
-                        </li>
-                        <li>
-                            <p><a class="red-text" href="https://vk.com/annushka_petrusha" target="_blank">Макет сайта Петруша А.(Отчество)</a></p>
-                        </li>
-                        <li>
-                            <p><a class="red-text" href="https://stankin.ru/subdivisions/id_180/stuffs?user=655" target="_blank">Преподаватель Овчинников П.Е.</a></p>
-                        </li>
+                            <p><a class="red-text" href="https://vk.com/idnan13" target="_blank">Вёрстка сайта Семениченко Д.В.</a></p>  
+                            <p><a class="red-text" href="https://vk.com/loiicom" target="_blank">Функции сайта Маркин Н.Д.</a></p>       
+                            <p><a class="red-text" href="https://vk.com/annushka_petrusha" target="_blank">Макет сайта Петруша А.О.</a></p>                       
+                            <p><a class="red-text" href="https://stankin.ru/subdivisions/id_180/stuffs?user=655" target="_blank">Преподаватель Овчинников П.Е.</a></p>                    
                     </ul>
                 </div>
             </div>
@@ -57,10 +49,10 @@
       .positioned {
         position: relative;
         background: yellow;
-        top: 550px;
+        top: 580px;
       }
     </style>
-    <li>
+    
         <p class="positioned"> <a href = "/index.html">Главная страница</a></p>
-     </li>
+     
 </body>
