--- a/form_res.html
+++ b/form_res.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-
+<html lang="en-us"></html>
+<html>
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Авторы проекта</title>
+    </head>
+</html>
 <html>
     <header>
 		<script>
