--- a/form_reg.html
+++ b/form_reg.html
@@ -24,6 +24,8 @@
 	<div>
 		<img id="image">
 	</div>
+
+
 	<button type="button"
 		onclick="showfoto()" id="btnfoto">
 		Подумой
@@ -33,6 +35,20 @@
 			let imege = document.getElementById("image");
 			image.src = "image/mem.jpg"
 			document.getElementById("btnfoto")
+					.style.display = "none";
+		}
+	</script>	
+
+	
+	<button type="button" 
+	  onclick="closefoto()" id="clsfot">
+	   Подумал, то жми сюда
+	</button>  
+	<script>
+		function closefoto(){
+		    let imege = document.getElementById("image");
+			image.src = "image/12.jpg"
+			document.getElementById("clsfot")
 					.style.display = "none";
 		}
 	</script>
