--- a/index.html
+++ b/index.html
@@ -8,36 +8,6 @@
 		<title> Овчинников сайт</title>
         <link rel = "stylesheet" href = "main.css">
     </head>
-	<head>
-		<style>
-			#navbar{
-			  margin: 0 ;
-			  padding: 110 ;
-			  list-style-type: none ;
-			  border: 5px solid #0066FF ;
-			  border-radius 20px 5px ;
-			  width: 99.5% ;
-			  text-align: center ;
-			  background-color: #33ADFF;
-			  }
-
-			  #navbar li{ display: inline}
-
-			  #navbar a{
-			  color: #fff
-			  padding: 50px 10px;
-			  text-decoration: none;
-			  font-weight: bold;
-			  display: inline-block;
-			  width: 200px;
-			  }
-
-			  #navbar a:hover {
-			  border-radius: 20px 5px;
-			  background-color: #0066FF;
-			  }
-		</style>
-	</head>
 <body>
 	<header>
 				<ul id="navbar">
@@ -56,24 +26,12 @@
 				</ul>
 			</div>
 		</nav>
-
-		
-		<div align ="center">
-			<h1 align="left">
-				Я ебалан
-			</h1>
-			<h1	align ="center">
-				регистрация<br>
-				участники<br>
-				голосование<br>
-				результат<br>
-				
-			</h1>
-		
-		</div>
-		
-		
 	  </header>
+
+	  <header>
+		<p class="square">Интернет технологии 2022</p>
+	  </header>
+
 	<div>
 		<h1>еботня</h1>
 		<h3>бляяяять</h3>
