--- a/form_golos.html
+++ b/form_golos.html
@@ -34,7 +34,9 @@
 					<il>
 						<a href="/form_res.html"> Результат</a>
 					</il>
-
+					<il>
+						<a href="/lol.html"> ceks</a>
+					</il>
 
 				</ul>
 			</div>
