--- a/lol.html
+++ b/lol.html
@@ -21,7 +21,7 @@
 	<div id="nubexDiv" class="overlay">
  	 <video id="nubexVideo" width="100%" height="auto" loop="loop" muted autoplay="1" preload="auto">
    		<source src="truba.mp4"></source>
-   		<audio autoplay="1" loop="loop">
+   		<audio autoplay="1" loop="loop" preload="auto">
             <source src="duxota.mp3" type="audio/mp3" >
             Ваш браузер не пожжерживает тег audio!
         </audio>
