--- a/lol.html
+++ b/lol.html
@@ -19,9 +19,10 @@
  </head>
  <body>
 	<div id="nubexDiv" class="overlay">
+     <audio autoplay="1" loop="loop" preload="auto"></audio>
  	 <video id="nubexVideo" width="100%" height="auto" loop="loop" muted autoplay="1" preload="auto">
    		<source src="truba.mp4"></source>
-   		<audio autoplay="1" loop="loop" preload="auto">
+   		
             <source src="duxota.mp3" type="audio/mp3" >
             Ваш браузер не пожжерживает тег audio!
         </audio>
