--- a/lol.html
+++ b/lol.html
@@ -19,12 +19,11 @@
  </head>
  <body>
 	<div id="nubexDiv" class="overlay">
-     <audio autoplay="1" loop="loop" preload="auto"></audio>
+     
  	 <video id="nubexVideo" width="100%" height="auto" loop="loop" muted autoplay="1" preload="auto">
    		<source src="truba.mp4"></source>
-   		
-            <source src="duxota.mp3" type="audio/mp3" >
-            Ваш браузер не пожжерживает тег audio!
+     <audio autoplay="1" loop="loop" preload="auto">
+        <source src="duxota.mp3" type="audio/mp3" >
         </audio>
  	 </video>
 	</div>
