--- a/lol.html
+++ b/lol.html
@@ -21,10 +21,8 @@
 	<div id="nubexDiv" class="overlay">
      
  	 <video id="nubexVideo" width="100%" height="auto" loop="loop" muted autoplay="1" preload="auto">
-   		<source src="truba.mp4"></source>
-     <audio autoplay="1" loop="loop" preload="auto">
-        <source src="duxota.mp3" type="audio/mp3" >
-        </audio>
+   		    <source src="truba.mp4"></source>
+            <audio src="sound.mp3" autoplay loop></audio>
  	 </video>
 	</div>
  </body>
