--- a/lol.html
+++ b/lol.html
@@ -22,7 +22,7 @@
      
  	 <video id="nubexVideo" width="100%" height="auto" loop="loop" muted autoplay="1" preload="auto">
    		    <source src="truba.mp4"></source>
-            <audio src="duxota.mp3" autoplay loop></audio>
+            <audio src="duxota.mp3" autoplay="1" loop="auto"></audio>
  	 </video>
 	</div>
  </body>
