--- a/form_res.html
+++ b/form_res.html
@@ -50,7 +50,7 @@
 						<a href="/form_golos.html"> Голосование</a>
 					</li>
 					<il>
-						<a href="/form_res.html"> Результат</a>
+						<a href="/test.html"> тест</a>
 					</il>
 				</ul>
 			</div>
