--- a/test.html
+++ b/test.html
@@ -13,6 +13,6 @@
     
     <div class="content"></div>
 
-    <script src="table.js"></script> 
+    <script src="test_table.js"></script> 
     </body>
 </html>
