table res ready
урааааааа наконец рабочая таблица

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <body>
     
     <div class="content"></div>
-
-    <script src="test_table.js"></script> 
+    <script src="test_json.js"></script>
+   
     </body>
 </html>
