--- a/form_reg.html
+++ b/form_reg.html
@@ -6,20 +6,9 @@
         <meta charset="UTF-8">
         <title>Подача заявки</title>
         <meta name="description" content="Описание страницы" />
-		<link rel = "stylesheet" href = "reg.css">
-
-
+		<link rel = "stylesheet" href = "main.css">
     </head>
 
-	<head>
-		<style>
-			A{
-				color:#800;
-				background: #ffffff;
-				padding: 2px;
-			}
-		</style>
-	</head>
 
 	<div>
 		<img id="image">
@@ -54,22 +43,10 @@
 					.style.display = "none";
 		}
 	</script>
-<body>
-  <style>
-	.st{
-	background:white;
-	}
-  </style>
-</body>
-
-        <nav class="collor" role="navigation">
-			<div class="navigation_form">
-				<ul class="right button">
+	<header>
+	    <ui id="navbar">
 					<li>
 						<a href="/index.html">Главная страница</a>
-					</li>
-					<li>
-						<a href="/form_reg.html">Подача заявки</a>
 					</li>
 					<li>
 						<a href="/form_golos.html"> Голосование</a>
@@ -77,10 +54,12 @@
 					<il>
 						<a href="/form_res.html"> Результат</a>
 					</il>
+		</ul>
+	</header>
+	<header>
+		<p class="square">Интернет технологии 2022</p>
+	  </header>
 
-
-				</ul>
-			</div>
 
             
         <main>
