--- a/form_res.html
+++ b/form_res.html
@@ -4,30 +4,31 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Авторы проекта</title>
+      <title>Результат</title>
+	  <link rel = "stylesheet" href = "main.css">
     </head>
 </html>
 <html>
-    <header>
+	<header>
+		<ul id="navbar">
+			<li>
+				<a href="/author.html">Авторы проекта</a>
+			</li>
+			<li>
+				<a href="/form_reg.html">Подача заявки</a>
+			</li>
+			<li>
+				<a href="/form_golos.html"> Голосование</a>
+			</li>
+		</ul>
+</header>
+
+<header>
+<p class="square">Интернет технологии 2022</p>
+</header>
+
 		
-		<nav class="collor" role="navigation">
-			<div class="navigation_form">
-				<a id="logo-container" href="/" class="logo">
-					ебаный рот
-				</a>
-				<ul class="right button">
-					<li>
-						<a href="/form_reg.html">Пачада заявки</a>
-					</li>
-					<li>
-						<a href="/form_golos.html"> Голосование</a>
-					</li>
-					<il>
-						<a href="/test.html"> тест</a>
-					</il>
-				</ul>
-			</div>
-		</nav>
+		
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
