--- a/form_golos.html
+++ b/form_golos.html
@@ -7,29 +7,16 @@
         <title>Название страницы</title>
         <meta name="description" content="Описание страницы" />
     </head>
-	<head>
-		<style>
-			A{
-				color:#800;
-				background: #ffffff;
-				padding: 2px;
-			}
-		</style>
-	</head>
-	<head><link rel = "stylesheet" href = "golos.css"></head>
+	<link rel = "stylesheet" href = "main.css">
 
     <body>
-        <nav class="collor" role="navigation">
-			<div class="navigation_form">
-				<a id="logo-container" href="/index.html" class="logo">
-					ебаный рот
-				</a>
-				<ul class="right button">
+		<header>
+				<ul id="navbar">
 					<li>
-						<a href="/form_reg.html">Пачада заявки</a>
+						<a href="/index.html"> Главная страница</a>
 					</li>
 					<li>
-						<a href="/form_golos.html"> Голосование</a>
+						<a href="/form_reg.html">Подача заявки</a>
 					</li>
 					<il>
 						<a href="/form_res.html"> Результат</a>
@@ -37,21 +24,21 @@
 					<il>
 						<a href="/lol.html"> ceks</a>
 					</il>
-
 				</ul>
-			</div>
+		</header>
 
+		<header>
+			<p class="square">Интернет технологии 2022</p>
+		</header>
 
         <main>
             <div align ="center">
                 <section>
-                    <h1>Голосование</h1>
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv5nMDU-at0Rz6zJf7K4be4FLNidJeoJ0ypvDCddKY-9z3PA/viewform?embedded=true" width="640" height="3500" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
-                    </section>
+                </section>
             </div>
-        
-            </main>
-
+        </main>
+	</body>
 
 
 
