--- a/form_res.html
+++ b/form_res.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
+
 <html>
-    <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Авторы проекта</title>
-    </head>
-</html>
-<html>
+	<head><link href="test_result.css" type="text/css" rel="stylesheet" media="screen,projection">
+		</head>
     <header>
-		
+		<title>Авторы проекта</title>
 		<nav class="collor" role="navigation">
 			<div class="navigation_form">
 				<a id="logo-container" href="/" class="logo">
@@ -32,6 +27,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<body>
+		<div>
+			<h4 class="header_center_table">Рейтинг проектов</h4>
+			<div class="center" style id="table">
+
+
+
+			</div>
+
+
+
+		</div>
 		<div class="content"></div>
 		<script src="create_table_res.js"></script>
 	</body>
