--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title> Овчинников сайт</title>
         <link rel = "stylesheet" href = "main.css">
+		<style>
+			body {
+               margin: 0;
+               font-family: Arial, Helvetica, sans-serif;
+                 }
+		</style>
     </head>
 <body>
 	<header>
-				<ul id="navbar">
+		         <div class="topnav">
 					<li>
-						<a href="/form_reg.html">Регистрация</a>
+						<a class ="active" href="/form_reg.html">Регистрация</a>
 					</li>
 					<li>
 						<a href="/form_golos.html"> Голосование</a>
@@ -20,7 +26,7 @@
 					<li>
 						<a href="/form_res.html"> Результат</a>
 					</li>
-				</ul>
+				 </div>
 	  </header>
 
 	  <header>
@@ -35,9 +41,7 @@
 		<p class="zh">Проект зазработан в 2022 году для Овцы</p>
 	  </header>
 
-	  <header>
-		<p class="square">Интернет технологии 2022</p>
-	  </header>
+	  
 
 	<div>
 		<h1>еботня</h1>
