norm panel vezde

--- a/form_golos.html
+++ b/form_golos.html
@@ -6,30 +6,38 @@
         <meta charset="UTF-8">
         <title>Название страницы</title>
         <meta name="description" content="Описание страницы" />
+		<link rel = "stylesheet" href = "main.css">
+		<style>
+			body {
+               margin: 0;
+               font-family: Arial, Helvetica, sans-serif;
+                 }
+		</style>
     </head>
-	<link rel = "stylesheet" href = "main.css">
+	
 
     <body>
 		<header>
-				<ul id="navbar">
-					<li>
-						<a href="/index.html"> Главная страница</a>
-					</li>
-					<li>
-						<a href="/form_reg.html">Подача заявки</a>
-					</li>
-					<il>
-						<a href="/form_res.html"> Результат</a>
-					</il>
-					<il>
-						<a href="/lol.html"> ceks</a>
-					</il>
-				</ul>
-		</header>
+			<div class="topnav">
+			   <li>
+				   <a  href="/index.html">Главная</a>
+			   </li>
+			   <li>
+				   <a href="/form_reg.html">Регистрация</a>
+			   </li>
+			   <li>
+				   <a class="active" href="/form_golos.html"> Голосование</a>
+			   </li>
+			   <li>
+				   <a href="/form_res.html"> Результат</a>
+			   </li>
+			   <li>
+				   <a href="/author.html">Авторы</a>
+			   </li>
+			</div>
+ </header>
 
-		<header>
-			<p class="square">Интернет технологии 2022</p>
-		</header>
+		
 
         <main>
             <div align ="center">
@@ -39,20 +47,6 @@
             </div>
         </main>
 	</body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
 
