--- a/form_res.html
+++ b/form_res.html
@@ -2,29 +2,37 @@
 
 <html>
 	<head><link href="test_result.css" type="text/css" rel="stylesheet" media="screen,projection">
-		</head>
-    <header>
-		<title>Авторы проекта</title>
-		<nav class="collor" role="navigation">
-			<div class="navigation_form">
-				<a id="logo-container" href="/" class="logo">
-					ебаный рот
-				</a>
-				<ul class="right button">
-					<li>
-						<a href="/form_reg.html">Пачада заявки</a>
-					</li>
-					<li>
-						<a href="/form_golos.html"> Голосование</a>
-					</li>
-					<il>
-						<a href="/test.html"> тест</a>
-					</il>
-				</ul>
-			</div>
-		</nav>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel = "stylesheet" href = "main.css">
+	<style>
+		body {
+		   margin: 0;
+		   font-family: Arial, Helvetica, sans-serif;
+			 }
+	</style>
+</head>
+
+
+	<header>
+		<div class="topnav">
+		   <li>
+			   <a  href="/index.html">Главная</a>
+		   </li>
+		   <li>
+			   <a href="/form_reg.html">Регистрация</a>
+		   </li>
+		   <li>
+			   <a href="/form_golos.html"> Голосование</a>
+		   </li>
+		   <li>
+			   <a class="active" href="/form_res.html"> Результат</a>
+		   </li>
+		   <li>
+			   <a href="/author.html">Авторы</a>
+		   </li>
+		</div>
+</header>
 
 	<body>
 		<div>
