--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 	<header>
 		         <div class="topnav">
 					<li>
-						<a class ="active" href="/form_reg.html">Регистрация</a>
+						<a class ="active" href="/index.html">Главная</a>
+					</li>
+					<li>
+						<a href="/form_reg.html">Регистрация</a>
 					</li>
 					<li>
 						<a href="/form_golos.html"> Голосование</a>
@@ -26,22 +29,18 @@
 					<li>
 						<a href="/form_res.html"> Результат</a>
 					</li>
+					<li>
+						<a href="/author.html">Авторы</a>
+					</li>
 				 </div>
 	  </header>
 
-	  <header>
-		<ul id="avt">
-			<li>
-				<a href="/author.html">Авторы</a>
-			</li>
-		</ul>
-	  </header>
+
 
 	  <header>
 		<p class="zh">Проект зазработан в 2022 году для Овцы</p>
 	  </header>
 
-	  
 
 	<div>
 		<h1>еботня</h1>
