--- a/form_reg.html
+++ b/form_reg.html
@@ -7,15 +7,21 @@
         <title>Подача заявки</title>
         <meta name="description" content="Описание страницы" />
 		<link rel = "stylesheet" href = "main.css">
+		<style>
+			body {
+               margin: 0;
+               font-family: Arial, Helvetica, sans-serif;
+                 }
+		</style>
     </head>
 
 
-	<div>
+	<!--<div>
 		<img id="image">
-	</div>
+	</div>-->
 
 
-	<button type="button"
+	<!--<button type="button"
 		onclick="showfoto()" id="btnfoto">
 		Подумой
 	</button>
@@ -28,10 +34,10 @@
 			document.getElementById("clsfot")
 			         .style.visibility = "visible";
 		}
-	</script>	
+	</script>-->	
 
 	
-	<button type="button"
+	<!--<button type="button"
 	  onclick="closefoto()" id="clsfot" >
 	   Подумал, то жми сюда
 	</button>  
@@ -42,23 +48,27 @@
 			document.getElementById("clsfot")
 					.style.display = "none";
 		}
-	</script>
+	</script>-->
 	<header>
-	    <ui id="navbar">
-					<li>
-						<a href="/index.html">Главная страница</a>
-					</li>
-					<li>
-						<a href="/form_golos.html"> Голосование</a>
-					</li>
-					<il>
-						<a href="/form_res.html"> Результат</a>
-					</il>
-		</ul>
-	</header>
-	<header>
-		<p class="square">Интернет технологии 2022</p>
-	  </header>
+		<div class="topnav">
+		   <li>
+			   <a  href="/index.html">Главная</a>
+		   </li>
+		   <li>
+			   <a class="active" href="/form_reg.html">Регистрация</a>
+		   </li>
+		   <li>
+			   <a href="/form_golos.html"> Голосование</a>
+		   </li>
+		   <li>
+			   <a href="/form_res.html"> Результат</a>
+		   </li>
+		   <li>
+			   <a href="/author.html">Авторы</a>
+		   </li>
+		</div>
+</header>
+	
 
 
             
