--- a/form_reg.html
+++ b/form_reg.html
@@ -15,40 +15,6 @@
 		</style>
     </head>
 
-
-	<!--<div>
-		<img id="image">
-	</div>-->
-
-
-	<!--<button type="button"
-		onclick="showfoto()" id="btnfoto">
-		Подумой
-	</button>
-	<script>
-		function showfoto() {
-			let image = document.getElementById("image");
-			image.src = "image/mem.jpg"
-			document.getElementById("btnfoto")
-					.style.display = "none";
-			document.getElementById("clsfot")
-			         .style.visibility = "visible";
-		}
-	</script>-->	
-
-	
-	<!--<button type="button"
-	  onclick="closefoto()" id="clsfot" >
-	   Подумал, то жми сюда
-	</button>  
-	<script>
-		function closefoto(){
-		    let image = document.getElementById("image");
-			image.src = "image/12.jpg"
-			document.getElementById("clsfot")
-					.style.display = "none";
-		}
-	</script>-->
 	<header>
 		<div class="topnav">
 		   <li>
@@ -68,7 +34,6 @@
 		   </li>
 		</div>
 </header>
-	
 
 
             
@@ -83,17 +48,39 @@
             </main>
 
 
-
-
-
-
-
-
-
-
-
-
-
+			<div>
+				<img id="image">
+			</div>
+		
+		
+			<button type="button"
+				onclick="showfoto()" id="btnfoto">
+				Подумой
+			</button>
+			<script>
+				function showfoto() {
+					let image = document.getElementById("image");
+					image.src = "image/mem.jpg"
+					document.getElementById("btnfoto")
+							.style.display = "none";
+					document.getElementById("clsfot")
+							 .style.visibility = "visible";
+				}
+			</script>	
+		
+			
+			<button type="button"
+			  onclick="closefoto()" id="clsfot" >
+			   Подумал, то жми сюда
+			</button>  
+			<script>
+				function closefoto(){
+					let image = document.getElementById("image");
+					image.src = "image/12.jpg"
+					document.getElementById("clsfot")
+							.style.display = "none";
+				}
+			</script>
 
 
 
