--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
 
 
-	  <header>
-		<p class="zh">Проект зазработан в 2022 году для Овцы</p>
-	  </header>
+	 
 
 
 	<div>
@@ -61,6 +59,11 @@
 					.style.display = "none";
 		}
 	</script>
+
+
+<header>
+	<div class="zh">Проект зазработан в 2022 году для Овцы</div>
+  </header>
 </body>
 
 </html>
