--- a/form_reg.html
+++ b/form_reg.html
@@ -81,7 +81,9 @@
 							.style.display = "none";
 				}
 			</script>
-
+<header>
+	<div class="zh">Проект зазработан в 2022 году для Овцы</div>
+  </header>
 
 
 </html>
