--- a/form_golos.html
+++ b/form_golos.html
@@ -4,7 +4,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>Название страницы</title>
+        <title>Голосование</title>
         <meta name="description" content="Описание страницы" />
 		<link rel = "stylesheet" href = "main.css">
 		<style>
