--- a/form_res.html
+++ b/form_res.html
@@ -3,6 +3,7 @@
 <html>
 	<head><link href="test_result.css" type="text/css" rel="stylesheet" media="screen,projection">
     <meta charset="utf-8">
+	<title>Результат</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel = "stylesheet" href = "main.css">
 	<style>
