--- a/index.html
+++ b/index.html
@@ -37,32 +37,11 @@
 
 
 
-	 
-
-
-	<div>
-		<h1>еботня</h1>
-		<h3>бляяяять</h3>
-		<img id="image">
-	</div>
-
-	<button type="button"
-		onclick="showfoto()" id="btnfoto">
-		опппппаааа
-	</button>
-
-	<script>
-		function showfoto() {
-			let image = document.getElementById("image");
-			image.src = "image/aaaaaaa.jpeg"
-			document.getElementById("btnfoto")
-					.style.display = "none";
-		}
-	</script>
+	
 
 
 <header>
-	<div class="zh">Проект зазработан в 2022 году для Овцы</div>
+	<div class="zh">Проект зазработан в 2022 году для закрытия дисциплина: "Интернет технологии"</div>
   </header>
 </body>
 
